# PRTG-Sensor-Hub

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README_CLOUDFLARE.md  ROADMAP.md  package-lock.json  package.json
.github/workflows/: ci.yml  deploy.yml  verify-downloads.yml
apps/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml  wrangler.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py
apps/api/app/: __init__.py  main.py  models.py  schemas.py
apps/api/app/api/: deps.py
apps/api/app/api/v1/: __init__.py
apps/api/app/api/v1/endpoints/: admin.py  auth.py  sensors.py  webhooks.py
apps/api/app/core/: __init__.py  config.py
apps/api/app/db/: __init__.py  database.py  utils.py
apps/api/app/services/: __init__.py  analyzer.py  auth.py
apps/api/tests/: conftest.py  test_analyzer.py  test_main.py
apps/web/: .env.example  .gitignore  eslint.config.mjs  jest.setup.js  next.config.js  next.config.mjs  package-lock.json  package.json  schema.sql  tsconfig.json  wrangler.jsonc  wrangler.toml
docker/: docker-compose.yml
scripts/: backup_d1.sh  build.sh  chunked_import.js  debug_full.html  generate_import_sql.js  import.sql  import_debug.sql  import_part1.sql  import_part2.sql  main.html  migrate.sh  package.json  paessler_import.json  part_0.sql  part_1.sql  part_2.sql  part_3.sql  part_4.sql  part_5.sql  part_6.sql  part_7.sql  part_8.sql  part_9.sql  part_test_no_trans.sql  part_tiny.sql  scrape_paessler.js  start-all.sh  start.sh  stop.sh  verify-api.sh
scripts/singles/: sensor_10.sql  (+534 more)
(+973 files in other folders)
